# web_rrhh

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  refactor.py
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  alembic.ini  check_fallecimiento.py  inspect_db.py  inspect_db_full.py  migrate_daily_limit.py  migrate_policies.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  db_seeder.py  main.py  migrate_dashboard_visibility.py  migrate_policies_2026.py  migrate_recurrence.py  migrate_reset_date.py
backend/app/models/: __init__.py  audit.py  balance_dynamic.py  complaint.py  convenio.py  holiday.py  leave_type.py  news.py  notification.py  organization.py  policy.py  upload.py  user.py  vacation.py
backend/app/routers/: audit.py  auth.py  complaint.py  config.py  convenio.py  holiday.py  leave_types.py  news.py  notifications.py  orgchart.py  policies.py  upload.py  users.py  vacation.py  websocket.py
backend/app/scripts/: fix_recurrence_data.py
backend/app/services/: audit.py  auth.py  convenio.py  holiday.py  notification.py  policy_engine.py  upload.py
backend/app/services/complaint/: __init__.py  crud.py  (+1 more)
backend/app/utils/: brute_force.py  business_days.py  duration.py  email.py  file_ops.py  file_processing.py  html_sanitizer.py  image_processing.py  security.py  upload_security.py
backend/app/websocket/: manager.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_main.py
(+728 files in other folders)
